--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,22 +1,14 @@
 :root {
-    --primary-color: #515154;
-    --header-color: #3e3e3e;
-    --white-color: #fff;
-    --black-color: #000;
-    --text-color: #1d1d1f;
-    --blue-color: #0066cc;
-    --price_old-color: #86868b;
-
     --header-height: 102px;
-    --header-sort-bar-height: 48px;
 }
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:wght@300;400;500;600;700&family=Quicksand:wght@500;700&family=Roboto:wght@300;400;500;700&display=swap");
 
 * {
     box-sizing: inherit;
 }
 
 html {
-    font-family: "Poppins", sans-serif;
+    font-family: "Inter", sans-serif;
     box-sizing: border-box;
 }
 
@@ -56,7 +48,7 @@ html {
 .gap-element {
     display: block;
     height: auto;
-    padding-top: 30px;
+    padding-top: 21px;
 }
 
 .mt-80 {
