--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -366,7 +366,7 @@
 
 .section-about {
     position: relative;
-    background-image: url(/assets/img/cong-bao-ve-1.png);
+    background-image: url(/assets/img/cong-bao-ve-1.png) !important;
     background-position: 60% 72%;
     background-size: cover;
 }
@@ -575,7 +575,7 @@
 
 /* Footer */
 .footer {
-    background-image: url(/assets/img/footer.jpg);
+    background-image: url(/assets/img/footer.jpg) !important;
 }
 
 .footer-fill {
